--- a/src/epub/text/charon.xhtml
+++ b/src/epub/text/charon.xhtml
@@ -12,15 +12,15 @@
 			<p>It was not with him a matter of years or of centuries, but of wide floods of time, and an old heaviness and a pain in the arms that had become for him part of the scheme that the gods had made and was of a piece with Eternity.</p>
 			<p>If the gods had even sent him a contrary wind it would have divided all time in his memory into two equal slabs.</p>
 			<p>So grey were all things always where he was that if any radiance lingered a moment among the dead, on the face of such a queen perhaps as Cleopatra, his eyes could not have perceived it.</p>
-			<p>It was strange that the dead nowadays were coming in such numbers. They were coming in thousands where they used to come in fifties. It was neither Charon's duty nor his wont to ponder in his grey soul why these things might be. Charon leaned forward and rowed.</p>
+			<p>It was strange that the dead nowadays were coming in such numbers. They were coming in thousands where they used to come in fifties. It was neither Charon’s duty nor his wont to ponder in his grey soul why these things might be. Charon leaned forward and rowed.</p>
 			<p>Then no one came for a while. It was not usual for the gods to send no one down from Earth for such a space. But the gods knew best.</p>
 			<p>Then one man came alone. And the little shade sat shivering on a lonely bench and the great boat pushed off. Only one passenger: the gods knew best. And great and weary Charon rowed on and on beside the little, silent, shivering ghost.</p>
-			<p>And the sound of the river was like a mighty sigh that Grief in the beginning had sighed among her sisters, and that could not die like the echoes of human sorrow failing on earthly hills, but was as old as time and the pain in Charon's arms.</p>
+			<p>And the sound of the river was like a mighty sigh that Grief in the beginning had sighed among her sisters, and that could not die like the echoes of human sorrow failing on earthly hills, but was as old as time and the pain in Charon’s arms.</p>
 			<p>Then the boat from the slow, grey river loomed up to the coast of<br/>
 			Dis and the little, silent shade still shivering stepped ashore, and<br/>
 			Charon turned the boat to go wearily back to the world. Then the<br/>
 			little shadow spoke, that had been a man.<br/></p>
-			<p>"I am the last," he said.</p>
+			<p>“I am the last,” he said.</p>
 			<p>No one had ever made Charon smile before, no one before had ever made him weep.</p>
 		</section>
 	</body>
