--- a/src/epub/text/the-raft-builders.xhtml
+++ b/src/epub/text/the-raft-builders.xhtml
@@ -9,9 +9,9 @@
 		<section id="the-raft-builders" epub:type="se:short-story">
 			<h2 epub:type="title">The Raft-Builders</h2>
 			<p>All we who write put me in mind of sailors hastily making rafts upon doomed ships.</p>
-			<p>When we break up under the heavy years and go down into eternity with all that is ours our thoughts like small lost rafts float on awhile upon Oblivion's sea. They will not carry much over those tides, our names and a phrase or two and little else.</p>
+			<p>When we break up under the heavy years and go down into eternity with all that is ours our thoughts like small lost rafts float on awhile upon Oblivion’s sea. They will not carry much over those tides, our names and a phrase or two and little else.</p>
 			<p>They that write as a trade to please the whim of the day, they are like sailors that work at the rafts only to warm their hands and to distract their thoughts from their certain doom; their rafts go all to pieces before the ship breaks up.</p>
-			<p>See now Oblivion shimmering all around us, its very tranquility deadlier than tempest. How little all our keels have troubled it. Time in its deeps swims like a monstrous whale; and, like a whale, feeds on the littlest things—small tunes and little unskilled songs of the olden, golden evenings—and anon turneth whale-like to overthrow whole ships.</p>
+			<p>See now Oblivion shimmering all around us, its very tranquility deadlier than tempest. How little all our keels have troubled it. Time in its deeps swims like a monstrous whale; and, like a whale, feeds on the littlest things⁠—small tunes and little unskilled songs of the olden, golden evenings⁠—and anon turneth whale-like to overthrow whole ships.</p>
 			<p>See now the wreckage of Babylon floating idly, and something there that once was Nineveh; already their kings and queens are in the deeps among the weedy masses of old centuries that hide the sodden bulk of sunken Tyre and make a darkness round Persepolis.</p>
 			<p>For the rest I dimly see the forms of foundered ships on the sea-floor strewn with crowns.</p>
 			<p>Our ships were all unseaworthy from the first.</p>
