--- a/src/epub/text/the-three-tall-sons.xhtml
+++ b/src/epub/text/the-three-tall-sons.xhtml
@@ -10,13 +10,13 @@
 			<h2 epub:type="title">The Three Tall Sons</h2>
 			<p>And at last Man raised on high the final glory of his civilization, the towering edifice of the ultimate city.</p>
 			<p>Softly beneath him in the deeps of the earth purred his machinery fulfilling all his needs, there was no more toil for man. There he sat at ease discussing the Sex Problem.</p>
-			<p>And sometimes painfully out of forgotten fields, there came to his outer door, came to the furthest rampart of the final glory of Man, a poor old woman begging. And always they turned her away. This glory of Man's achievement, this city was not for her.</p>
+			<p>And sometimes painfully out of forgotten fields, there came to his outer door, came to the furthest rampart of the final glory of Man, a poor old woman begging. And always they turned her away. This glory of Man’s achievement, this city was not for her.</p>
 			<p>It was Nature that came thus begging in from the fields, whom they always turned away.</p>
 			<p>And away she went again alone to her fields.</p>
 			<p>And one day she came again, and again they sent her hence. But her three tall sons came too.</p>
-			<p>"These shall go in," she said. "Even these my sons to your city."</p>
+			<p>“These shall go in,” she said. “Even these my sons to your city.”</p>
 			<p>And the three tall sons went in.</p>
-			<p>And these are Nature's sons, the forlorn one's terrible children,<br/>
+			<p>And these are Nature’s sons, the forlorn one’s terrible children,<br/>
 			War, Famine and Plague.<br/></p>
 			<p>Yea and they went in there and found Man unawares in his city still poring over his Problems, obsessed with his civilization, and never hearing their tread as those three came up behind.</p>
 		</section>
