--- a/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
+++ b/src/epub/text/the-true-history-of-the-hare-and-the-toroise.xhtml
@@ -10,27 +10,27 @@
 			<h2 epub:type="title">The True History of the Hare and the Tortoise</h2>
 			<p>For a long time there was doubt with acrimony among the beasts as to whether the Hare or the Tortoise could run the swifter. Some said the Hare was the swifter of the two because he had such long ears, and others said the Tortoise was the swifter because anyone whose shell was so hard as that should be able to run hard too. And lo, the forces of estrangement and disorder perpetually postponed a decisive contest.</p>
 			<p>But when there was nearly war among the beasts, at last an arrangement was come to and it was decided that the Hare and the Tortoise should run a race of five hundred yards so that all should see who was right.</p>
-			<p>"Ridiculous nonsense!" said the Hare, and it was all his backers could do to get him to run.</p>
-			<p>"The contest is most welcome to me," said the Tortoise, "I shall not shirk it."</p>
+			<p>“Ridiculous nonsense!” said the Hare, and it was all his backers could do to get him to run.</p>
+			<p>“The contest is most welcome to me,” said the Tortoise, “I shall not shirk it.”</p>
 			<p>O, how his backers cheered.</p>
 			<p>Feeling ran high on the day of the race; the goose rushed at the fox and nearly pecked him. Both sides spoke loudly of the approaching victory up to the very moment of the race.</p>
-			<p>"I am absolutely confident of success," said the Tortoise. But the Hare said nothing, he looked bored and cross. Some of his supporters deserted him then and went to the other side, who were loudly cheering the Tortoise's inspiriting words. But many remained with the Hare. "We shall not be disappointed in him," they said. "A beast with such long ears is bound to win."</p>
-			<p>"Run hard," said the supporters of the Tortoise.</p>
-			<p>And "run hard" became a kind of catch-phrase which everybody repeated to one another. "Hard shell and hard living. That's what the country wants. Run hard," they said. And these words were never uttered but multitudes cheered from their hearts.</p>
+			<p>“I am absolutely confident of success,” said the Tortoise. But the Hare said nothing, he looked bored and cross. Some of his supporters deserted him then and went to the other side, who were loudly cheering the Tortoise’s inspiriting words. But many remained with the Hare. “We shall not be disappointed in him,” they said. “A beast with such long ears is bound to win.”</p>
+			<p>“Run hard,” said the supporters of the Tortoise.</p>
+			<p>And “run hard” became a kind of catch-phrase which everybody repeated to one another. “Hard shell and hard living. That’s what the country wants. Run hard,” they said. And these words were never uttered but multitudes cheered from their hearts.</p>
 			<p>Then they were off, and suddenly there was a hush.</p>
 			<p>The Hare dashed off for about a hundred yards, then he looked round to see where his rival was.</p>
-			<p>"It is rather absurd," he said, "to race with a Tortoise." And he sat down and scratched himself. "Run hard! Run hard!" shouted some.</p>
-			<p>"Let him rest," shouted others. And "let him rest" became a catch-phrase too.</p>
+			<p>“It is rather absurd,” he said, “to race with a Tortoise.” And he sat down and scratched himself. “Run hard! Run hard!” shouted some.</p>
+			<p>“Let him rest,” shouted others. And “let him rest” became a catch-phrase too.</p>
 			<p>And after a while his rival drew near to him.</p>
-			<p>"There comes that damned Tortoise," said the Hare, and he got up and ran as hard as could be so that he should not let the Tortoise beat him.</p>
-			<p>"Those ears will win," said his friends. "Those ears will win; and establish upon an incontestable footing the truth of what we have said." And some of them turned to the backers of the Tortoise and said: "What about your beast now?"</p>
-			<p>"Run hard," they replied. "Run hard."</p>
+			<p>“There comes that damned Tortoise,” said the Hare, and he got up and ran as hard as could be so that he should not let the Tortoise beat him.</p>
+			<p>“Those ears will win,” said his friends. “Those ears will win; and establish upon an incontestable footing the truth of what we have said.” And some of them turned to the backers of the Tortoise and said: “What about your beast now?”</p>
+			<p>“Run hard,” they replied. “Run hard.”</p>
 			<p>The Hare ran on for nearly three hundred yards, nearly in fact as far as the winning-post, when it suddenly struck him what a fool he looked running races with a Tortoise who was nowhere in sight, and he sat down again and scratched.</p>
-			<p>"Run hard. Run hard," said the crowd, and "Let him rest."</p>
-			<p>"Whatever is the use of it?" said the Hare, and this time he stopped for good. Some say he slept.</p>
+			<p>“Run hard. Run hard,” said the crowd, and “Let him rest.”</p>
+			<p>“Whatever is the use of it?” said the Hare, and this time he stopped for good. Some say he slept.</p>
 			<p>There was desperate excitement for an hour or two, and then the<br/>
 			Tortoise won.<br/></p>
-			<p>"Run hard. Run hard," shouted his backers. "Hard shell and hard living: that's what has done it." And then they asked the Tortoise what his achievement signified, and he went and asked the Turtle. And the Turtle said, "It is a glorious victory for the forces of swiftness." And then the Tortoise repeated it to his friends. And all the beasts said nothing else for years. And even to this day, "a glorious victory for the forces of swiftness" is a catch-phrase in the house of the snail.</p>
+			<p>“Run hard. Run hard,” shouted his backers. “Hard shell and hard living: that’s what has done it.” And then they asked the Tortoise what his achievement signified, and he went and asked the Turtle. And the Turtle said, “It is a glorious victory for the forces of swiftness.” And then the Tortoise repeated it to his friends. And all the beasts said nothing else for years. And even to this day, “a glorious victory for the forces of swiftness” is a catch-phrase in the house of the snail.</p>
 			<p>And the reason that this version of the race is not widely known is that very few of those that witnessed it survived the great forest-fire that happened shortly after. It came up over the weald by night with a great wind. The Hare and the Tortoise and a very few of the beasts saw it far off from a high bare hill that was at the edge of the trees, and they hurriedly called a meeting to decide what messenger they should send to warn the beasts in the forest.</p>
 			<p>They sent the Tortoise.</p>
 		</section>
