--- a/src/epub/text/time-and-the-tradesman.xhtml
+++ b/src/epub/text/time-and-the-tradesman.xhtml
@@ -10,7 +10,7 @@
 			<h2 epub:type="title">Time and the Tradesman</h2>
 			<p>Once Time as he prowled the world, his hair grey not with weakness but with dust of the ruin of cities, came to a furniture shop and entered the Antique department. And there he saw a man darkening the wood of a chair with dye and beating it with chains and making imitation wormholes in it.</p>
 			<p>And when Time saw another doing his work he stood by him awhile and looked on critically.</p>
-			<p>And at last he said: "That is not how I work," and he turned the man's hair white and bent his back and put some furrows in his little cunning face; then turned and strode away, for a mighty city that was weary and sick and too long had troubled the fields was sore in need of him.</p>
+			<p>And at last he said: “That is not how I work,” and he turned the man’s hair white and bent his back and put some furrows in his little cunning face; then turned and strode away, for a mighty city that was weary and sick and too long had troubled the fields was sore in need of him.</p>
 		</section>
 	</body>
 </html>
