--- a/src/epub/text/what-we-have-come-to.xhtml
+++ b/src/epub/text/what-we-have-come-to.xhtml
@@ -9,7 +9,7 @@
 		<section id="what-we-have-come-to" epub:type="se:short-story">
 			<h2 epub:type="title">What We Have Come To</h2>
 			<p>When the advertiser saw the cathedral spires over the downs in the distance, he looked at them and wept.</p>
-			<p>"If only," he said, "this were an advertisement of Beefo, so nice, so nutritious, try it in your soup, ladies like it."</p>
+			<p>“If only,” he said, “this were an advertisement of Beefo, so nice, so nutritious, try it in your soup, ladies like it.”</p>
 		</section>
 	</body>
 </html>
