--- a/src/epub/text/a-losing-game.xhtml
+++ b/src/epub/text/a-losing-game.xhtml
@@ -9,12 +9,12 @@
 		<section id="a-losing-game" epub:type="se:short-story">
 			<h2 epub:type="title">A Losing Game</h2>
 			<p>Once in a tavern Man met face to skull with Death. Man entered gaily but Death gave no greeting, he sat with his jowl morosely over an ominous wine.</p>
-			<p>"Come, come," said Man, "we have been antagonists long, and if I were losing yet I should not be surly."</p>
+			<p>“Come, come,” said Man, “we have been antagonists long, and if I were losing yet I should not be surly.”</p>
 			<p>But Death remained unfriendly watching his bowl of wine and gave no word in answer.</p>
-			<p>Then Man solicitously moved nearer to him and, speaking cheerily still, "Come, come," he said again, "you must not resent defeat."</p>
+			<p>Then Man solicitously moved nearer to him and, speaking cheerily still, “Come, come,” he said again, “you must not resent defeat.”</p>
 			<p>And still Death was gloomy and cross and sipped at his infamous wine and would not look up at Man and would not be companionable.</p>
-			<p>But Man hated gloom either in beast or god, and it made him unhappy to see his adversary's discomfort, all the more because he was the cause, and still he tried to cheer him.</p>
-			<p>"Have you not slain the Dinatherium?" he said. "Have you not put out the Moon? Why! you will beat me yet."</p>
+			<p>But Man hated gloom either in beast or god, and it made him unhappy to see his adversary’s discomfort, all the more because he was the cause, and still he tried to cheer him.</p>
+			<p>“Have you not slain the Dinatherium?” he said. “Have you not put out the Moon? Why! you will beat me yet.”</p>
 			<p>And with a dry and barking sound Death wept and nothing said; and presently Man arose and went wondering away; for he knew not if Death wept out of pity for his opponent, or because he knew that he should not have such sport again when the old game was over and Man was gone, or whether because perhaps, for some hidden reason, he could never repeat on Earth his triumph over the Moon.</p>
 		</section>
 	</body>
