--- a/src/epub/text/death-and-the-orange.xhtml
+++ b/src/epub/text/death-and-the-orange.xhtml
@@ -9,7 +9,7 @@
 		<section id="death-and-the-orange" epub:type="se:short-story">
 			<h2 epub:type="title">Death and the Orange</h2>
 			<p>Two dark young men in a foreign southern land sat at a restaurant table with one woman.</p>
-			<p>And on the woman's plate was a small orange which had an evil laughter in its heart.</p>
+			<p>And on the woman’s plate was a small orange which had an evil laughter in its heart.</p>
 			<p>And both of the men would be looking at the woman all the time, and they ate little and they drank much.</p>
 			<p>And the woman was smiling equally at each.</p>
 			<p>Then the small orange that had the laughter in its heart rolled slowly off the plate on to the floor. And the dark young men both sought for it at once, and they met suddenly beneath the table, and soon they were speaking swift words to one another, and a horror and an impotence came over the Reason of each as she sat helpless at the back of the mind, and the heart of the orange laughed and the woman went on smiling; and Death, who was sitting at another table, tête-à-tête with an old man, rose and came over to listen to the quarrel.</p>
