--- a/src/epub/text/the-assignation.xhtml
+++ b/src/epub/text/the-assignation.xhtml
@@ -11,9 +11,9 @@
 			<p>Fame singing in the highways, and trifling as she sang, with sordid adventurers, passed the poet by.</p>
 			<p>And still the poet made for her little chaplets of song, to deck her forehead in the courts of Time: and still she wore instead the worthless garlands, that boisterous citizens flung to her in the ways, made out of perishable things.</p>
 			<p>And after a while whenever these garlands died the poet came to her with his chaplets of song; and still she laughed at him and wore the worthless wreaths, though they always died at evening.</p>
-			<p>And one day in his bitterness the poet rebuked her, and said to her: "Lovely Fame, even in the highways and the byways you have not foreborne to laugh and shout and jest with worthless men, and I have toiled for you and dreamed of you and you mock me and pass me by."</p>
+			<p>And one day in his bitterness the poet rebuked her, and said to her: “Lovely Fame, even in the highways and the byways you have not foreborne to laugh and shout and jest with worthless men, and I have toiled for you and dreamed of you and you mock me and pass me by.”</p>
 			<p>And Fame turned her back on him and walked away, but in departing she looked over her shoulder and smiled at him as she had not smiled before, and, almost speaking in a whisper, said:</p>
-			<p>"I will meet you in the graveyard at the back of the Workhouse in a hundred years."</p>
+			<p>“I will meet you in the graveyard at the back of the Workhouse in a hundred years.”</p>
 		</section>
 	</body>
 </html>
