--- a/src/epub/text/the-city.xhtml
+++ b/src/epub/text/the-city.xhtml
@@ -9,12 +9,12 @@
 		<section id="the-city" epub:type="se:short-story">
 			<h2 epub:type="title">The City</h2>
 			<p>In time as well as space my fancy roams far from here. It led me once to the edge of certain cliffs that were low and red and rose up out of a desert: a little way off in the desert there was a city. It was evening, and I sat and watched the city.</p>
-			<p>Presently I saw men by threes and fours come softly stealing out of that city's gate to the number of about twenty. I heard the hum of men's voices speaking at evening.</p>
-			<p>"It is well they are gone," they said. "It is well they are gone. We can do business now. It is well they are gone." And the men that had left the city sped away over the sand and so passed into the twilight.</p>
-			<p>"Who are these men?" I said to my glittering leader.</p>
-			<p>"The poets," my fancy answered. "The poets and artists."</p>
-			<p>"Why do they steal away?" I said to him. "And why are the people glad that they have gone?"</p>
-			<p>He said: "It must be some doom that is going to fall on the city, something has warned them and they have stolen away. Nothing may warn the people."</p>
+			<p>Presently I saw men by threes and fours come softly stealing out of that city’s gate to the number of about twenty. I heard the hum of men’s voices speaking at evening.</p>
+			<p>“It is well they are gone,” they said. “It is well they are gone. We can do business now. It is well they are gone.” And the men that had left the city sped away over the sand and so passed into the twilight.</p>
+			<p>“Who are these men?” I said to my glittering leader.</p>
+			<p>“The poets,” my fancy answered. “The poets and artists.”</p>
+			<p>“Why do they steal away?” I said to him. “And why are the people glad that they have gone?”</p>
+			<p>He said: “It must be some doom that is going to fall on the city, something has warned them and they have stolen away. Nothing may warn the people.”</p>
 			<p>I heard the wrangling voices, glad with commerce, rise up from the city. And then I also departed, for there was an ominous look on the face of the sky.</p>
 			<p>And only a thousand years later I passed that way, and there was nothing, even among the weeds, of what had been that city.</p>
 		</section>
