--- a/src/epub/text/the-death-of-pan.xhtml
+++ b/src/epub/text/the-death-of-pan.xhtml
@@ -10,11 +10,11 @@
 			<h2 epub:type="title">The Death of Pan</h2>
 			<p>When the travellers from London entered Arcady they lamented one to another the death of Pan.</p>
 			<p>And anon they saw him lying stiff and still.</p>
-			<p>Horned Pan was still and the dew was on his fur; he had not the look of a live animal. And then they said, "It is true that Pan is dead."</p>
+			<p>Horned Pan was still and the dew was on his fur; he had not the look of a live animal. And then they said, “It is true that Pan is dead.”</p>
 			<p>And, standing melancholy by that huge prone body, they looked for long at memorable Pan.</p>
 			<p>And evening came and a small star appeared.</p>
 			<p>And presently from a hamlet of some Arcadian valley, with a sound of idle song, Arcadian maidens came.</p>
-			<p>And, when they saw there, suddenly in the twilight, that old recumbent god, they stopped in their running and whispered among themselves. "How silly he looks," they said, and thereat they laughed a little.</p>
+			<p>And, when they saw there, suddenly in the twilight, that old recumbent god, they stopped in their running and whispered among themselves. “How silly he looks,” they said, and thereat they laughed a little.</p>
 			<p>And at the sound of their laughter Pan leaped up and the gravel flew from his hooves.</p>
 			<p>And, for as long as the travellers stood and listened, the crags and the hill-tops of Arcady rang with the sounds of pursuit.</p>
 		</section>
