--- a/src/epub/text/the-demagogue-and-the-demi-monde.xhtml
+++ b/src/epub/text/the-demagogue-and-the-demi-monde.xhtml
@@ -9,12 +9,12 @@
 		<section id="the-demagogue-and-the-demi-monde" epub:type="se:short-story">
 			<h2 epub:type="title">The Demagogue and the Demi-Monde</h2>
 			<p>A demagogue and a demi-mondaine chanced to arrive together at the gate of Paradise. And the Saint looked sorrowfully at them both.</p>
-			<p>"Why were you a demagogue?" he said to the first.</p>
-			<p>"Because," said the demagogue, "I stood for those principles that have made us what we are and have endeared our Party to the great heart of the people. In a word I stood unflinchingly on the plank of popular representation."</p>
-			<p>"And you?" said the Saint to her of the demi-monde.</p>
-			<p>"I wanted money," said the demi-mondaine.</p>
-			<p>And after some moments' thought the Saint said: "Well, come in; though you don't deserve to."</p>
-			<p>But to the demagogue he said: "We genuinely regret that the limited space at our disposal and our unfortunate lack of interest in those Questions that you have gone so far to inculate and have so ably upheld in the past, prevent us from giving you the support for which you seek."</p>
+			<p>“Why were you a demagogue?” he said to the first.</p>
+			<p>“Because,” said the demagogue, “I stood for those principles that have made us what we are and have endeared our Party to the great heart of the people. In a word I stood unflinchingly on the plank of popular representation.”</p>
+			<p>“And you?” said the Saint to her of the demi-monde.</p>
+			<p>“I wanted money,” said the demi-mondaine.</p>
+			<p>And after some moments’ thought the Saint said: “Well, come in; though you don’t deserve to.”</p>
+			<p>But to the demagogue he said: “We genuinely regret that the limited space at our disposal and our unfortunate lack of interest in those Questions that you have gone so far to inculate and have so ably upheld in the past, prevent us from giving you the support for which you seek.”</p>
 			<p>And he shut the golden door.</p>
 		</section>
 	</body>
