--- a/src/epub/text/the-giant-poppy.xhtml
+++ b/src/epub/text/the-giant-poppy.xhtml
@@ -9,10 +9,10 @@
 		<section id="the-giant-poppy" epub:type="se:short-story">
 			<h2 epub:type="title">The Giant Poppy</h2>
 			<p>I dreamt that I went back to the hills I knew, whence on a clear day you can see the walls of Ilion and the plains of Roncesvalles. There used to be woods along the tops of those hills with clearings in them where the moonlight fell, and there when no one watched the fairies danced.</p>
-			<p>But there were no woods when I went back, no fairies nor distant glimpse of Ilion or plains of Roncesvalles, only one giant poppy waved in the wind, and as it waved it hummed "Remember not." And by its oak-like stem a poet sat, dressed like a shepherd and playing an ancient tune softly upon a pipe. I asked him if the fairies had passed that way or anything olden.</p>
-			<p>He said: "The poppy has grown apace and is killing gods and fairies. Its fumes are suffocating the world, and its roots drain it of its beautiful strength." And I asked him why he sat on the hills I knew, playing an olden tune.</p>
-			<p>And he answered: "Because the tune is bad for the poppy, which would otherwise grow more swiftly; and because if the brotherhood of which I am one were to cease to pipe on the hills men would stray over the world and be lost or come to terrible ends. We think we have saved Agamemnon."</p>
-			<p>Then he fell to piping again that olden tune, while the wind among the poppy's sleepy petals murmured "Remember not. Remember not."</p>
+			<p>But there were no woods when I went back, no fairies nor distant glimpse of Ilion or plains of Roncesvalles, only one giant poppy waved in the wind, and as it waved it hummed “Remember not.” And by its oak-like stem a poet sat, dressed like a shepherd and playing an ancient tune softly upon a pipe. I asked him if the fairies had passed that way or anything olden.</p>
+			<p>He said: “The poppy has grown apace and is killing gods and fairies. Its fumes are suffocating the world, and its roots drain it of its beautiful strength.” And I asked him why he sat on the hills I knew, playing an olden tune.</p>
+			<p>And he answered: “Because the tune is bad for the poppy, which would otherwise grow more swiftly; and because if the brotherhood of which I am one were to cease to pipe on the hills men would stray over the world and be lost or come to terrible ends. We think we have saved Agamemnon.”</p>
+			<p>Then he fell to piping again that olden tune, while the wind among the poppy’s sleepy petals murmured “Remember not. Remember not.”</p>
 		</section>
 	</body>
 </html>
