--- a/src/epub/text/the-mist.xhtml
+++ b/src/epub/text/the-mist.xhtml
@@ -8,11 +8,11 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-mist" epub:type="se:short-story">
 			<h2 epub:type="title">The Mist</h2>
-			<p>The mist said unto the mist: "Let us go up into the Downs." And the mist came up weeping.</p>
+			<p>The mist said unto the mist: “Let us go up into the Downs.” And the mist came up weeping.</p>
 			<p>And the mist went into the high places and the hollows.</p>
 			<p>And clumps of trees in the distance stood ghostly in the haze.</p>
-			<p>But I went to a prophet, one who loved the Downs, and I said to him: "Why does the mist come up weeping into the Downs when it goes into the high places and the hollows?"</p>
-			<p>And he answered: "The mist is the company of a multitude of souls who never saw the Downs, and now are dead. Therefore they come up weeping into the Downs, who are dead and never saw them."</p>
+			<p>But I went to a prophet, one who loved the Downs, and I said to him: “Why does the mist come up weeping into the Downs when it goes into the high places and the hollows?”</p>
+			<p>And he answered: “The mist is the company of a multitude of souls who never saw the Downs, and now are dead. Therefore they come up weeping into the Downs, who are dead and never saw them.”</p>
 		</section>
 	</body>
 </html>
