--- a/src/epub/text/the-prayer-of-the-flowers.xhtml
+++ b/src/epub/text/the-prayer-of-the-flowers.xhtml
@@ -9,13 +9,13 @@
 		<section id="the-prayer-of-the-flowers" epub:type="se:short-story">
 			<h2 epub:type="title">The Prayer of the Flowers</h2>
 			<p>It was the voice of the flowers on the West wind, the lovable, the old, the lazy West wind, blowing ceaselessly, blowing sleepily, going Greecewards.</p>
-			<p>"The woods have gone away, they have fallen and left us; men love us no longer, we are lonely by moonlight. Great engines rush over the beautiful fields, their ways lie hard and terrible up and down the land.</p>
-			<p>"The cancrous cities spread over the grass, they clatter in their lairs continually, they glitter about us blemishing the night.</p>
-			<p>"The woods are gone, O Pan, the woods, the woods. And thou art far, O Pan, and far away."</p>
+			<p>“The woods have gone away, they have fallen and left us; men love us no longer, we are lonely by moonlight. Great engines rush over the beautiful fields, their ways lie hard and terrible up and down the land.</p>
+			<p>“The cancrous cities spread over the grass, they clatter in their lairs continually, they glitter about us blemishing the night.</p>
+			<p>“The woods are gone, O Pan, the woods, the woods. And thou art far, O Pan, and far away.”</p>
 			<p>I was standing by night between two railway embankments on the edge of a Midland city. On one of them I saw the trains go by, once in every two minutes, and on the other, the trains went by twice in every five.</p>
 			<p>Quite close were the glaring factories, and the sky above them wore the fearful look that it wears in dreams of fever.</p>
-			<p>The flowers were right in the stride of that advancing city, and thence I heard them sending up their cry. And then I heard, beating musically up wind, the voice of Pan reproving them from Arcady—</p>
-			<p>"Be patient a little, these things are not for long."</p>
+			<p>The flowers were right in the stride of that advancing city, and thence I heard them sending up their cry. And then I heard, beating musically up wind, the voice of Pan reproving them from Arcady⁠—</p>
+			<p>“Be patient a little, these things are not for long.”</p>
 		</section>
 	</body>
 </html>
