--- a/src/epub/text/the-sphinx-at-gizeh.xhtml
+++ b/src/epub/text/the-sphinx-at-gizeh.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-sphinx-at-gizeh" epub:type="se:short-story">
 			<h2 epub:type="title">The Sphinx at Gizeh</h2>
-			<p>I saw the other day the Sphinx's painted face.</p>
+			<p>I saw the other day the Sphinx’s painted face.</p>
 			<p>She had painted her face in order to ogle Time.</p>
 			<p>And he has spared no other painted face in all the world but hers.</p>
 			<p>Delilah was younger than she, and Delilah is dust. Time hath loved nothing but this worthless painted face.</p>
@@ -20,11 +20,11 @@
 			<p>Time that has carried away the seven gates of Thebes!</p>
 			<p>She has tried to bind him with ropes of eternal sand, she had hoped to oppress him with the Pyramids.</p>
 			<p>He lies there in the sand with his foolish hair all spread about her paws.</p>
-			<p>If she ever finds his secret we will put out his eyes, so that he shall find no more our beautiful things—there are lovely gates in Florence that I fear he will carry away.</p>
+			<p>If she ever finds his secret we will put out his eyes, so that he shall find no more our beautiful things⁠—there are lovely gates in Florence that I fear he will carry away.</p>
 			<p>We have tried to bind him with song and with old customs, but they only held him for a little while, and he has always smitten us and mocked us.</p>
 			<p>When he is blind he shall dance to us and make sport.</p>
 			<p>Great clumsy time shall stumble and dance, who liked to kill little children, and can hurt even the daisies no longer.</p>
-			<p>Then shall our children laugh at him who slew Babylon's winged bulls, and smote great numbers of the gods and fairies—when he is shorn of his hours and his years.</p>
+			<p>Then shall our children laugh at him who slew Babylon’s winged bulls, and smote great numbers of the gods and fairies⁠—when he is shorn of his hours and his years.</p>
 			<p>We will shut him up in the Pyramid of Cheops, in the great chamber where the sarcophagus is. Thence we will lead him out when we give our feasts. He shall ripen our corn for us and do menial work.</p>
 			<p>We will kiss they painted face, O Sphinx, if thou wilt betray to us Time.</p>
 			<p>And yet I fear that in his ultimate anguish he may take hold blindly of the world and the moon, and slowly pull down upon him the House of Man.</p>
