--- a/src/epub/text/the-tomb-of-pan.xhtml
+++ b/src/epub/text/the-tomb-of-pan.xhtml
@@ -8,7 +8,7 @@
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="the-tomb-of-pan" epub:type="se:short-story">
 			<h2 epub:type="title">The Tomb of Pan</h2>
-			<p>"Seeing," they said, "that old-time Pan is dead, let us now make a tomb for him and a monument, that the dreadful worship of long ago may be remembered and avoided by all."</p>
+			<p>“Seeing,” they said, “that old-time Pan is dead, let us now make a tomb for him and a monument, that the dreadful worship of long ago may be remembered and avoided by all.”</p>
 			<p>So said the people of the enlightened lands. And they built a white and mighty tomb of marble. Slowly it rose under the hands of the builders and longer every evening after sunset it gleamed with rays of the departed sun.</p>
 			<p>And many mourned for Pan while the builders built; many reviled him. Some called the builders to cease and to weep for Pan and others called them to leave no memorial at all of so infamous a god. But the builders built on steadily.</p>
 			<p>And one day all was finished, and the tomb stood there like a steep sea-cliff. And Pan was carved thereon with humbled head and the feet of angels pressed upon his neck. And when the tomb was finished the sun had already set, but the afterglow was rosy on the huge bulk of Pan.</p>
