--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,163 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/the-assignation.xhtml">The Assignation</a>
+				</li>
+				<li>
+					<a href="text/charon.xhtml">Charon</a>
+				</li>
+				<li>
+					<a href="text/the-death-of-pan.xhtml">The Death of Pan</a>
+				</li>
+				<li>
+					<a href="text/the-sphinx-at-gizeh.xhtml">The Sphinx at Gizeh</a>
+				</li>
+				<li>
+					<a href="text/the-hen.xhtml">The Hen</a>
+				</li>
+				<li>
+					<a href="text/wind-and-fog.xhtml">Wind and Fog</a>
+				</li>
+				<li>
+					<a href="text/the-raft-builders.xhtml">The Raft-Builders</a>
+				</li>
+				<li>
+					<a href="text/the-workman.xhtml">The Workman</a>
+				</li>
+				<li>
+					<a href="text/the-guest.xhtml">The Guest</a>
+				</li>
+				<li>
+					<a href="text/death-and-odysseus.xhtml">Death and Odysseus</a>
+				</li>
+				<li>
+					<a href="text/death-and-the-orange.xhtml">Death and the Orange</a>
+				</li>
+				<li>
+					<a href="text/the-prayer-of-the-flowers.xhtml">The Prayer of the Flowers</a>
+				</li>
+				<li>
+					<a href="text/time-and-the-tradesman.xhtml">Time and the Tradesman</a>
+				</li>
+				<li>
+					<a href="text/the-little-city.xhtml">The Little City</a>
+				</li>
+				<li>
+					<a href="text/the-unpasturable-fields.xhtml">The Unpasturable Fields</a>
+				</li>
+				<li>
+					<a href="text/the-worm-and-the-angel.xhtml">The Worm and the Angel</a>
+				</li>
+				<li>
+					<a href="text/the-songless-country.xhtml">The Songless Country</a>
+				</li>
+				<li>
+					<a href="text/the-latest-thing.xhtml">The Latest Thing</a>
+				</li>
+				<li>
+					<a href="text/the-demagogue-and-the-demi-monde.xhtml">The Demagogue and the Demi-Monde</a>
+				</li>
+				<li>
+					<a href="text/the-giant-poppy.xhtml">The Giant Poppy</a>
+				</li>
+				<li>
+					<a href="text/roses.xhtml">Roses</a>
+				</li>
+				<li>
+					<a href="text/the-man-with-the-golden-earrings.xhtml">The Man with the Golden Ear-Rings</a>
+				</li>
+				<li>
+					<a href="text/the-dream-of-king-karna-vootra.xhtml">The Dream of King Karna-Vootra</a>
+				</li>
+				<li>
+					<a href="text/the-storm.xhtml">The Storm</a>
+				</li>
+				<li>
+					<a href="text/a-mistaken-identity.xhtml">A Mistaken Identity</a>
+				</li>
+				<li>
+					<a href="text/the-true-history-of-the-hare-and-the-toroise.xhtml">The True History of the Hare and the Tortoise</a>
+				</li>
+				<li>
+					<a href="text/alone-the-immortals.xhtml">Alone the Immortals</a>
+				</li>
+				<li>
+					<a href="text/a-moral-little-tale.xhtml">A Moral Little Tale</a>
+				</li>
+				<li>
+					<a href="text/the-return-of-song.xhtml">The Return of Song</a>
+				</li>
+				<li>
+					<a href="text/spring-in-town.xhtml">Spring in Town</a>
+				</li>
+				<li>
+					<a href="text/how-the-enemy-came-to-thlunrana.xhtml">How the Enemy Came to Thlūnrāna</a>
+				</li>
+				<li>
+					<a href="text/a-losing-game.xhtml">A Losing Game</a>
+				</li>
+				<li>
+					<a href="text/taking-up-picadilly.xhtml">Taking Up Picadilly</a>
+				</li>
+				<li>
+					<a href="text/after-the-fire.xhtml">After the Fire</a>
+				</li>
+				<li>
+					<a href="text/the-city.xhtml">The City</a>
+				</li>
+				<li>
+					<a href="text/the-food-of-death.xhtml">The Food of Death</a>
+				</li>
+				<li>
+					<a href="text/the-lonely-idol.xhtml">The Lonely Idol</a>
+				</li>
+				<li>
+					<a href="text/the-sphinx-in-thebes-massachusetts.xhtml">The Sphinx in Thebes (Massachusetts)</a>
+				</li>
+				<li>
+					<a href="text/the-reward.xhtml">The Reward</a>
+				</li>
+				<li>
+					<a href="text/the-trouble-in-leafy-green-street.xhtml">The Trouble in Leafy Green Street</a>
+				</li>
+				<li>
+					<a href="text/the-mist.xhtml">The Mist</a>
+				</li>
+				<li>
+					<a href="text/furrow-maker.xhtml">Furrow-Maker</a>
+				</li>
+				<li>
+					<a href="text/lobster-salad.xhtml">Lobster Salad</a>
+				</li>
+				<li>
+					<a href="text/the-return-of-the-exiles.xhtml">The Return of the Exiles</a>
+				</li>
+				<li>
+					<a href="text/nature-and-time.xhtml">Nature and Time</a>
+				</li>
+				<li>
+					<a href="text/the-song-of-the-blackbird.xhtml">The Song of the Blackbird</a>
+				</li>
+				<li>
+					<a href="text/the-messengers.xhtml">The Messengers</a>
+				</li>
+				<li>
+					<a href="text/the-three-tall-sons.xhtml">The Three Tall Sons</a>
+				</li>
+				<li>
+					<a href="text/compromise.xhtml">Compromise</a>
+				</li>
+				<li>
+					<a href="text/what-we-have-come-to.xhtml">What We Have Come To</a>
+				</li>
+				<li>
+					<a href="text/the-tomb-of-pan.xhtml">The Tomb of Pan</a>
+				</li>
+				<li>
+					<a href="text/the-poet-speaks-with-earth.xhtml">The Poet Speaks with Earth</a>
+				</li>
+				<li>
+					<a href="text/endnotes.xhtml">Endnotes</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +184,10 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
+					<a href="text/the-assignation.xhtml" epub:type="bodymatter">Fifty-One Tales</a>
 				</li>
 				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/endnotes.xhtml" epub:type="backmatter endnotes">Endnotes</a>
 				</li>
 			</ol>
 		</nav>
