[Editorial] Modernize spelling and hyphenation

--- a/src/epub/text/the-death-of-pan.xhtml
+++ b/src/epub/text/the-death-of-pan.xhtml
@@ -16,7 +16,7 @@
 			<p>And presently from a hamlet of some Arcadian valley, with a sound of idle song, Arcadian maidens came.</p>
 			<p>And, when they saw there, suddenly in the twilight, that old recumbent god, they stopped in their running and whispered among themselves. “How silly he looks,” they said, and thereat they laughed a little.</p>
 			<p>And at the sound of their laughter Pan leaped up and the gravel flew from his hooves.</p>
-			<p>And, for as long as the travellers stood and listened, the crags and the hill-tops of Arcady rang with the sounds of pursuit.</p>
+			<p>And, for as long as the travellers stood and listened, the crags and the hilltops of Arcady rang with the sounds of pursuit.</p>
 		</section>
 	</body>
 </html>
