--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -23,7 +23,7 @@
 					<a href="text/the-death-of-pan.xhtml">The Death of Pan</a>
 				</li>
 				<li>
-					<a href="text/the-sphinx-at-gizeh.xhtml">The Sphinx at Gizeh</a>
+					<a href="text/the-sphinx-at-giza.xhtml">The Sphinx at Giza</a>
 				</li>
 				<li>
 					<a href="text/the-hen.xhtml">The Hen</a>
@@ -68,7 +68,7 @@
 					<a href="text/the-latest-thing.xhtml">The Latest Thing</a>
 				</li>
 				<li>
-					<a href="text/the-demagogue-and-the-demi-monde.xhtml">The Demagogue and the Demi-Monde</a>
+					<a href="text/the-demagogue-and-the-demimonde.xhtml">The Demagogue and the Demimonde</a>
 				</li>
 				<li>
 					<a href="text/the-giant-poppy.xhtml">The Giant Poppy</a>
@@ -77,7 +77,7 @@
 					<a href="text/roses.xhtml">Roses</a>
 				</li>
 				<li>
-					<a href="text/the-man-with-the-golden-earrings.xhtml">The Man with the Golden Ear-Rings</a>
+					<a href="text/the-man-with-the-golden-earrings.xhtml">The Man with the Golden Earrings</a>
 				</li>
 				<li>
 					<a href="text/the-dream-of-king-karna-vootra.xhtml">The Dream of King Karna-Vootra</a>
