--- a/src/epub/text/the-sphinx-at-giza.xhtml
+++ b/src/epub/text/the-sphinx-at-giza.xhtml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-US">
 	<head>
-		<title>The Sphinx at Gizeh</title>
+		<title>The Sphinx at Giza</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="the-sphinx-at-gizeh" epub:type="se:short-story">
-			<h2 epub:type="title">The Sphinx at Gizeh</h2>
+		<section id="the-sphinx-at-giza" epub:type="se:short-story">
+			<h2 epub:type="title">The Sphinx at Giza</h2>
 			<p>I saw the other day the Sphinx’s painted face.</p>
 			<p>She had painted her face in order to ogle Time.</p>
 			<p>And he has spared no other painted face in all the world but hers.</p>
